--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
@@ -1,6 +1,8 @@
 @page "/reporting/merchant-settlement-history"
 @using EstateManagementUI.BlazorServer.Factories
+@using EstateManagementUI.BusinessLogic.Models
 @using EstateManagementUI.BusinessLogic.Requests
+@using MerchantSettlementHistoryModel = EstateManagementUI.BlazorServer.Models.MerchantSettlementHistoryModel
 @rendermode InteractiveServer
 @inject IMediator Mediator
 @inject NavigationManager NavigationManager
@@ -197,7 +199,7 @@
 </div>
 
 @code {
-    private List<MerchantModel>? merchants;
+    private List<MerchantDropDownModel>? merchants;
     private List<MerchantSettlementHistoryModel>? settlements;
     private bool isLoading = false;
     private string? errorMessage;
@@ -217,9 +219,8 @@
         try
         {
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111"); // Test estate ID
-            var query = new Queries.GetMerchantsQuery(
-                CorrelationIdHelper.New(),
-                estateId, null, null, null, null, null);
+            var query = new Queries.GetMerchantsForDropDownQuery(
+                CorrelationIdHelper.New(),estateId);
 
             var result = await Mediator.Send(query);
             if (result.IsSuccess)
