--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
@@ -3,7 +3,12 @@
 @using System.Text
 @using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BlazorServer.Components.Shared
+@using EstateManagementUI.BusinessLogic.Models
 @using EstateManagementUI.BusinessLogic.Requests
+@using ContractProductModel = EstateManagementUI.BlazorServer.Models.ContractProductModel
+@using MerchantModel = EstateManagementUI.BlazorServer.Models.MerchantModel
+@using OperatorModel = EstateManagementUI.BlazorServer.Models.OperatorModel
+@using TransactionDetailModel = EstateManagementUI.BlazorServer.Models.TransactionDetailModel
 @inject IMediator Mediator
 @inject NavigationManager Navigation
 @inject ILogger<TransactionDetail> Logger
@@ -72,7 +77,7 @@
                     <!-- Merchant Filter -->
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-2">Merchant</label>
-                        <MultiSelectDropdown TItem="MerchantModel"
+                        <MultiSelectDropdown TItem="MerchantDropDownModel"
                                            Items="merchants"
                                            SelectedItems="_selectedMerchantIds"
                                            SelectedItemsChanged="OnMerchantSelectionChanged"
@@ -331,7 +336,7 @@
     
     // Data
     private List<TransactionDetailModel>? detailData;
-    private List<MerchantModel>? merchants;
+    private List<MerchantDropDownModel>? merchants;
     private List<OperatorModel>? operators;
     private List<ContractProductModel>? products;
     
@@ -426,7 +431,7 @@
             var accessToken = DEFAULT_ACCESS_TOKEN;
             
             // Load filter options
-            var merchantsTask = Mediator.Send(new Queries.GetMerchantsQuery(correlationId, estateId, null, null, null, null, null));
+            var merchantsTask = Mediator.Send(new Queries.GetMerchantsForDropDownQuery(correlationId, estateId));
             var operatorsTask = Mediator.Send(new Queries.GetOperatorsQuery(correlationId, estateId));
             var contractsTask = Mediator.Send(new Queries.GetContractsQuery(correlationId, accessToken, estateId));
             
