--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionSummaryOperator.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionSummaryOperator.razor
@@ -1,6 +1,9 @@
 @page "/reporting/transaction-summary-operator"
 @using EstateManagementUI.BlazorServer.Factories
+@using EstateManagementUI.BusinessLogic.Models
 @using EstateManagementUI.BusinessLogic.Requests
+@using OperatorModel = EstateManagementUI.BlazorServer.Models.OperatorModel
+@using OperatorTransactionSummaryModel = EstateManagementUI.BlazorServer.Models.OperatorTransactionSummaryModel
 @rendermode InteractiveServer
 @inject IMediator Mediator
 @inject NavigationManager Navigation
@@ -251,7 +254,7 @@
     
     // Data
     private List<OperatorTransactionSummaryModel>? summaryData;
-    private List<MerchantModel>? merchants;
+    private List<MerchantDropDownModel>? merchants;
     private List<OperatorModel>? operators;
     
     // KPIs
@@ -280,7 +283,7 @@
             var accessToken = "stubbed-token";
             
             // Load filter options
-            var merchantsTask = Mediator.Send(new Queries.GetMerchantsQuery(correlationId, estateId, null, null, null, null, null));
+            var merchantsTask = Mediator.Send(new Queries.GetMerchantsForDropDownQuery(correlationId, estateId));
             var operatorsTask = Mediator.Send(new Queries.GetOperatorsQuery(correlationId, estateId));
             
             await Task.WhenAll(merchantsTask, operatorsTask);
