Refactor contract data loading and model structure
- Remove AccessToken from GetContractsQuery; update all usages
- Update API client to handle token internally for contracts
- Change ContractProductTransactionFeeModel to use int enums
- Add DTOs for contract products and transaction fees
- Add model factory method to map API contracts to UI models
- Move contract list page logic to partial class and OnAfterRenderAsync
- Update all stub/test data to use new int-based fee types
- Remove obsolete code and ensure consistency with backend

--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
@@ -434,7 +434,7 @@
             // Load filter options
             var merchantsTask = Mediator.Send(new MerchantQueries.GetMerchantsForDropDownQuery(correlationId, estateId));
             var operatorsTask = Mediator.Send(new OperatorQueries.GetOperatorsQuery(correlationId, estateId));
-            var contractsTask = Mediator.Send(new ContractQueries.GetContractsQuery(correlationId, accessToken, estateId));
+            var contractsTask = Mediator.Send(new ContractQueries.GetContractsQuery(correlationId, estateId));
             
             await Task.WhenAll(merchantsTask, operatorsTask, contractsTask);
             
