--- a/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Edit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Edit.razor
@@ -426,7 +426,7 @@ else
         try
         {
             isLoading = true;
-            var result = await Mediator.Send(new ContractQueries.GetContractQuery(CorrelationIdHelper.New(), "stubbed-token", Guid.Parse("11111111-1111-1111-1111-111111111111"), ContractId));
+            var result = await Mediator.Send(new ContractQueries.GetContractQuery(CorrelationIdHelper.New(),  Guid.Parse("11111111-1111-1111-1111-111111111111"), ContractId));
             
             if (result.IsSuccess && result.Data != null)
             {
