--- a/EstateManagementUI.BlazorServer/Components/Pages/Estate/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Estate/Index.razor
@@ -208,7 +208,7 @@
                                         {
                                             @foreach (var op in availableOperators)
                                             {
-                                                <option value="@op.OperatorId">@op.Name</option>
+                                                <option value="@op.OperatorId">@op.OperatorName</option>
                                             }
                                         }
                                     </select>
