--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Edit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Edit.razor
@@ -193,7 +193,7 @@
                                     <option value="">Select an operator...</option>
                                     @if (availableOperators != null) {
                                         @foreach (var op in availableOperators) {
-                                            <option value="@op.OperatorId">@op.Name</option>
+                                            <option value="@op.OperatorId">@op.OperatorName</option>
                                         }
                                     }
                                 </select>
